# Blog_Quarto

./: .gitignore  .nojekyll  404.feed-full-staged  404.html  404.qmd  _quarto.yml  _quarto_internal_scss_error.scss  index.html  index.qmd  index.xml  listings.json  pyproject.toml  search.json  sitemap.xml
.github/workflows/: publish.yml
.quarto/idx/: 404.qmd.json  index.qmd.json
.quarto/listing/: listing-cache.json
.quarto/xref/: 05f43797  142985f5  4870b2aa  8ea24150  INDEX
_site/: 404-listing.json  404.feed-full-staged  404.html  CNAME  index.html  index.xml  listings.json  robots.txt  search.json  sitemap.xml
_site/aboutMe/: history.html  resume.html
_site/achievements/: index.html
_site/articles/: index.html
_site/posts/: index.html
_site/projects/: index.html
aboutMe/: resume.html  resume.qmd  resume.quarto_ipynb  resume.tex
aboutMe/widgets/: __init__.py  education_widget.py  experience_widget.py
achievements/: index.html  index.qmd  index.quarto_ipynb
achievements/example/: index.qmd
articles/: _metadata.yml  index.html  index.qmd  index.quarto_ipynb
articles/example/: index.qmd
posts/: index.html  index.qmd
posts/80bacc68-054f-4ecf-958a-ce404eb4c8ff/: index.ent  index.html  index.qmd  index.tex
posts/example/: index.qmd
posts/step_by_step_guide_on_how_to_ruin_your_company_and_your_team_with_ai/: bibliography.bib  index.html  index.qmd  index.tex
projects/: index.html  index.qmd  index.quarto_ipynb
themes/: dark_theme.scss  light_theme.scss
utils/: blank_alternate_formats_util.html
widgets/: __init__.py  notice_widget.py
(+393 files in other folders)
