[tool.poetry]
name = "blog-quarto"
version = "0.1.0"
description = ""
authors = ["Daniel Filho - DF <dr.torquato180204@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.1.1"
pydantic = "^2.10.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
